CHATS_SIT/force-app/main/default/objects/Individual_E_mail__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Begin_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Information</label>
        <type>Email</type>
    </fields>
     <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Individual E-mails</relationshipLabel>
        <relationshipName>Individual_E_mails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Individual E-mail</label>
    <nameField>
        <displayFormat>EI-{000000}</displayFormat>
        <label>E-mail Information Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individual E-mails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PC_email_Not_blank</fullName>
        <active>true</active>
        <description>The email information of PC cannot be blank. CCCAP-14422</description>
        <errorConditionFormula>AND(Individual__r.Is_Primary_Parent_Caretaker__c  ,   ISCHANGED( Email_Information__c )  ,ISBLANK(Email_Information__c) )</errorConditionFormula>
        <errorDisplayField>Email_Information__c</errorDisplayField>
        <errorMessage>Complete the field.</errorMessage>
    </validationRules>
</CustomObject>