CHATS_SIT/force-app/main/default/objects/Individual_E_mail__c/validationRules/PC_email_Not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>PC_email_Not_blank</fullName>
    <active>true</active>
    <description>The email information of PC cannot be blank. CCCAP-14422</description>
    <errorConditionFormula>AND(Individual__r.Is_Primary_Parent_Caretaker__c  ,   ISCHANGED( Email_Information__c )  ,ISBLANK(Email_Information__c) )</errorConditionFormula>
    <errorDisplayField>Email_Information__c</errorDisplayField>
    <errorMessage>Complete the field.</errorMessage>
</ValidationRule>